--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,6 +5,7 @@
             
             body {
                 font-family: 'Open Sans', sans-serif;
+                background: #040404;
             }
             /* style pr le header */
             
@@ -80,17 +81,18 @@
                 border: 5px solid rgb(248, 81, 4);
                 .container-fluid {
                     // margin: 30px;
+                    color: #fff;
                     h2 {
                         border: 5px solid rgb(0, 225, 255);
-                        // font-size: 7rem !important;
-                        // font-weight: 700;
-                        // text-transform: uppercase;
-                        // line-height: 1;
-                        // margin-top: 20px;
+                        font-size: 3rem !important;
+                        font-weight: 700;
+                        text-transform: uppercase;
+                        line-height: 1;
+                        margin-top: 100px;
                         // position: relative;
-                        // &:hover {
-                        //     color: rgba(255, 255, 255, 0.7);
-                        // }
+                        &:hover {
+                            color: rgba(255, 255, 255, 0.7);
+                        }
                     }
                     h3 {
                         // font-size: 3rem !important;
@@ -155,36 +157,44 @@
                         }
                     }
                 }
-                .section {
-                    border: 5px solid rgb(53, 248, 4);
-                    width: 100% !important;
-                    h2 {
-                        font-size: 7rem !important;
-                        border: 5px solid rgb(0, 225, 255);
-                        font-weight: 700;
-                        text-transform: uppercase;
-                        line-height: 1;
-                        // margin-top: 20px;
-                        // position: relative;
-                        &:hover {
-                            color: rgba(255, 255, 255, 0.7);
+                .section1 {
+                    border: 5px solid rgb(255, 0, 191);
+                    margin-top: 100px !important;
+                    .rapha {
+                        background-color: rgba(255, 255, 255, 0.08) !important;
+                        border: 5px solid yellow;
+                        h3 {
+                            color: #fff;
+                            &:hover {
+                                color: rgba(255, 255, 255, 0.7);
+                            }
+                        }
+                        p {
+                            margin: 40px;
+                            color: #fff;
+                            font-weight: bold;
+                            &:hover {
+                                color: rgba(255, 255, 255, 0.7);
+                            }
                         }
                     }
-                    .noms {
-                        margin: auto;
-                        padding: 50% !important;
-                        text-transform: uppercase;
-                        text-align: center;
-                        border: 5px solid rgb(47, 0, 255);
-                        transition: transform 1s;
-                        // &:hover {
-                        //     transform: scale(1.3);
-                        // }
-                        a {
-                            background-color: rgba(255, 255, 255, 0.08) !important;
-                            color: aqua;
-                        }
+                    .connectées {
+                        background-image: url(../../public/img/rapha.jpg) !important;
+                        height: 100vh !important;
+                        background-position: center;
+                        background-size: cover;
+                        background-repeat: no-repeat;
+                        background-attachment: fixed;
+                        border: 5px solid red;
                     }
+                    img {
+                        border: 5px solid rgb(255, 196, 0);
+                        height: 100vh !important;
+                        width: 100%;
+                    }
+                    // .retour {
+                    //     background: rgba(255, 255, 255, 0.08);
+                    // }
                 }
             }
             /* FIN MAIN */
