--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,11 @@
+@charset "UTF-8";
 * {
   box-sizing: border-box;
 }
 
 body {
   font-family: "Open Sans", sans-serif;
+  background: #040404;
 }
 
 /* style pr le header */
@@ -72,8 +74,19 @@ main {
   overflow: hidden !important;
   border: 5px solid #f85104;
 }
+main .container-fluid {
+  color: #fff;
+}
 main .container-fluid h2 {
   border: 5px solid #00e1ff;
+  font-size: 3rem !important;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 1;
+  margin-top: 100px;
+}
+main .container-fluid h2:hover {
+  color: rgba(255, 255, 255, 0.7);
 }
 main .container-fluid .fa-facebook-f {
   position: absolute;
@@ -125,31 +138,41 @@ main .container-fluid .fa-whatsapp {
 main .container-fluid .fa-whatsapp:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section {
-  border: 5px solid #35f804;
-  width: 100% !important;
+main .section1 {
+  border: 5px solid #ff00bf;
+  margin-top: 100px !important;
 }
-main .section h2 {
-  font-size: 7rem !important;
-  border: 5px solid #00e1ff;
-  font-weight: 700;
-  text-transform: uppercase;
-  line-height: 1;
+main .section1 .rapha {
+  background-color: rgba(255, 255, 255, 0.08) !important;
+  border: 5px solid yellow;
 }
-main .section h2:hover {
+main .section1 .rapha h3 {
+  color: #fff;
+}
+main .section1 .rapha h3:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section .noms {
-  margin: auto;
-  padding: 50% !important;
-  text-transform: uppercase;
-  text-align: center;
-  border: 5px solid #2f00ff;
-  transition: transform 1s;
+main .section1 .rapha p {
+  margin: 40px;
+  color: #fff;
+  font-weight: bold;
 }
-main .section .noms a {
-  background-color: rgba(255, 255, 255, 0.08) !important;
-  color: aqua;
+main .section1 .rapha p:hover {
+  color: rgba(255, 255, 255, 0.7);
+}
+main .section1 .connectées {
+  background-image: url(../../public/img/rapha.jpg) !important;
+  height: 100vh !important;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  border: 5px solid red;
+}
+main .section1 img {
+  border: 5px solid #ffc400;
+  height: 100vh !important;
+  width: 100%;
 }
 
 /* FIN MAIN */
