--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -106,6 +106,7 @@
                         //     color: #fff;
                         // }
                     }
+                    // RESEAUX SOCIAUX
                     .fa-facebook-f {
                         position: absolute;
                         right: 30px;
@@ -157,6 +158,8 @@
                         }
                     }
                 }
+                /* FIN RESEAUX SOCIAUX */
+                // SECTION 1
                 .section1 {
                     border: 5px solid rgb(255, 0, 191);
                     margin-top: 100px !important;
@@ -191,11 +194,48 @@
                         height: 100vh !important;
                         width: 100%;
                     }
-                    // .retour {
-                    //     background: rgba(255, 255, 255, 0.08);
-                    // }
                 }
+                /*  FIN SECTION 1 */
+                // SECTION 2
                 .section2 {
+                    border: 5px solid rgb(0, 4, 255);
+                    margin-top: 100px !important;
+                    .lamia {
+                        background: rgba(255, 255, 255, 0.08) !important;
+                        border: 5px solid rgb(0, 255, 76);
+                        h3 {
+                            &:hover {
+                                color: rgba(255, 255, 255, 0.7);
+                            }
+                        }
+                        p {
+                            margin: 50px;
+                            transition: transform 1s;
+                            &:hover {
+                                transform: scale(1.3);
+                            }
+                        }
+                    }
+                    .connectées {
+                        background-image: url(../../public/img/lamia.jpg);
+                        height: 100vh;
+                        background-size: cover;
+                        background-repeat: no-repeat;
+                        background-attachment: fixed;
+                        border: 5px solid rgb(248, 245, 245);
+                    }
+                    img {
+                        width: 100%;
+                        border: 5px solid rgb(0, 255, 0);
+                        transition: transform 1.5s;
+                        &:hover {
+                            transform: scale(1.5);
+                        }
+                    }
+                }
+                /* FIN SECTION 2 */
+                // SECTION 10
+                .section10 {
                     border: 5px solid rgb(255, 0, 191);
                     width: 100%;
                     margin-top: 100px !important;
@@ -230,6 +270,7 @@
                         height: 100vh;
                     }
                 }
+                /* FIN SECTION 10 */
             }
             /* FIN MAIN */
             
