--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -311,3 +311,43 @@
                 }
             }
             /* FIN SECTION 4 */
+            // SECTION 5
+            .section5 {
+                border: 5px solid rgb(0, 4, 255);
+                margin-top: 100px !important;
+                .barbara {
+                    background: rgba(255, 255, 255, 0.08) !important;
+                    border: 5px solid rgb(0, 255, 76);
+                    h3 {
+                        &:hover {
+                            color: rgba(255, 255, 255, 0.7);
+                        }
+                    }
+                    p {
+                        margin: 50px;
+                        transition: transform 1s;
+                        &:hover {
+                            transform: scale(1.3);
+                        }
+                    }
+                }
+                .connectées {
+                    background-image: url(../../public/img/barbara.jpg);
+                    height: 100vh;
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    background-attachment: fixed;
+                    border: 5px solid rgb(248, 245, 245);
+                }
+                img {
+                    background-position: top !important;
+                    width: 100%;
+                    height: 100vh;
+                    border: 5px solid rgb(0, 255, 0);
+                    transition: transform 1.5s;
+                    &:hover {
+                        transform: scale(1.5);
+                    }
+                }
+            }
+            /* FIN SECTION 5 */
