--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,224 +1,17 @@
-@charset "UTF-8";
-* {
-  box-sizing: border-box;
-}
+/* Error: expected "}".
+ *     ,
+ * 546 |             /* FIN SECTION 10 *∕
+ *     |                                 ^
+ *     '
+ *   assets\scss\style.scss 546:33  root stylesheet */
 
-body {
-  font-family: "Open Sans", sans-serif;
-  background: #040404;
-  color: #fff;
-}
-
-/* style pr le header */
-#header {
-  background: no-repeat url(../../public/img/accueil1.jpg) top/cover !important;
-  border: 5px solid red;
-  transition: ease-in-out 0.3s;
-  position: relative;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-}
-#header * {
-  transition: ease-in-out 0.3s;
-}
-#header h1 {
-  text-transform: uppercase;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
-  position: relative;
-  color: rgba(255, 255, 255, 0.7);
-  font-size: 2.1rem;
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  margin-right: 300px;
-  margin-top: 5px;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected "}".\a     \2577 \a 546 \2502              /* FIN SECTION 10 */\a     \2502                                  ^\a     \2575 \a   assets\\scss\\style.scss 546:33  root stylesheet';
 }
-#header h1:hover {
-  color: #fff;
-}
-#header nav {
-  text-align: center;
-  top: 0px;
-}
-#header .nav-menu {
-  border: 5px solid #f4f804;
-  margin-right: 70px;
-  width: 100%;
-}
-#header .nav-menu .bouton {
-  color: rgba(255, 255, 255, 0.7);
-  border: 1px solid rgba(255, 255, 255, 0.7);
-  margin-right: 10px;
-}
-#header .nav-menu ul {
-  padding: 0;
-  list-style: none;
-  margin: auto;
-}
-#header .nav-menu ul li {
-  margin-left: 15px;
-}
-#header .nav-menu a {
-  text-transform: uppercase;
-  position: relative;
-  font-size: 1.1rem;
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  color: #fff;
-}
-#header .nav-menu a:hover {
-  color: rgba(255, 255, 255, 0.7) !important;
-}
-
-/* fin header */
-main {
-  overflow: hidden !important;
-  border: 5px solid #f85104;
-  /* FIN RESEAUX SOCIAUX */
-  /*  FIN SECTION 1 */
-  /* FIN SECTION 2 */
-  /* FIN SECTION 3 */
-  /* FIN SECTION 4 */
-  /* FIN SECTION 5 */
-  /* FIN SECTION 6 */
-  /* FIN SECTION 7 */
-  /* FIN SECTION 8 */
-  /* FIN SECTION 9 */
-  /* SECTION 10 */
-  /* FIN SECTION 10 */
-  /* SECTION 11 */
-  /* FIN SECTION 11 */
-}
-main .container-fluid h2 {
-  border: 5px solid #00e1ff;
-  font-size: 3rem !important;
-  font-weight: 700;
-  text-transform: uppercase;
-  line-height: 1;
-  margin-top: 100px;
-}
-main .container-fluid h2:hover {
-  color: rgba(255, 255, 255, 0.7);
-}
-main .container-fluid .fa-facebook-f {
-  position: absolute;
-  right: 30px;
-  top: 30%;
-  font-size: 1.5rem;
-  color: #fff;
-}
-main .container-fluid .fa-facebook-f:hover {
-  color: rgba(255, 255, 255, 0.7);
-}
-main .container-fluid .fa-twitter {
-  position: absolute;
-  right: 30px;
-  top: 37%;
-  font-size: 1.5rem;
-  color: #fff;
-}
-main .container-fluid .fa-twitter:hover {
-  color: rgba(255, 255, 255, 0.7);
-}
-main .container-fluid .fa-instagram {
-  position: absolute;
-  right: 30px;
-  top: 44%;
-  font-size: 1.5rem;
-  color: #fff;
-}
-main .container-fluid .fa-instagram:hover {
-  color: rgba(255, 255, 255, 0.7);
-}
-main .container-fluid .fa-snapchat-ghost {
-  position: absolute;
-  right: 30px;
-  top: 51%;
-  font-size: 1.5rem;
-  color: #fff;
-}
-main .container-fluid .fa-snapchat-ghost:hover {
-  color: rgba(255, 255, 255, 0.7);
-}
-main .container-fluid .fa-whatsapp {
-  position: absolute;
-  right: 30px;
-  top: 58%;
-  font-size: 1.5rem;
-  color: #fff;
-}
-main .container-fluid .fa-whatsapp:hover {
-  color: rgba(255, 255, 255, 0.7);
-}
-main .section1 {
-  border: 5px solid #ff00bf;
-  margin-top: 100px !important;
-}
-main .section1 .rapha {
-  background-color: rgba(255, 255, 255, 0.08) !important;
-  border: 5px solid yellow;
-}
-main .section1 .rapha h3:hover {
-  color: rgba(255, 255, 255, 0.7);
-}
-main .section1 .rapha p {
-  margin: 40px;
-  color: #fff;
-  font-weight: bold;
-}
-main .section1 .rapha p:hover {
-  color: rgba(255, 255, 255, 0.7);
-}
-main .section1 .connectées {
-  background-image: url(../../public/img/rapha.jpg) !important;
-  height: 100vh !important;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  border: 5px solid red;
-}
-main .section1 img {
-  border: 5px solid #ffc400;
-  height: 100vh !important;
-  width: 100%;
-}
-main .section2 {
-  border: 5px solid #0004ff;
-  margin-top: 100px !important;
-}
-main .section2 .lamia {
-  background: rgba(255, 255, 255, 0.08) !important;
-  border: 5px solid #00ff4c;
-}
-main .section2 .lamia h3:hover {
-  color: rgba(255, 255, 255, 0.7);
-}
-main .section2 .lamia p {
-  margin: 50px;
-  transition: transform 1s;
-}
-main .section2 .lamia p:hover {
-  transform: scale(1.3);
-}
-main .section2 .connectées {
-  background-image: url(../../public/img/lamia.jpg);
-  height: 100vh;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  border: 5px solid #f8f5f5;
-}
-main .section2 img {
-  width: 100%;
-  border: 5px solid lime;
-  transition: transform 1.5s;
-}
-main .section2 img:hover {
-  transform: scale(1.5);
-}
-
-/* FIN MAIN */
-/* FIN FOOTER */
-
-/*# sourceMappingURL=style.css.map */
