--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -234,7 +234,8 @@
                 }
             }
             /* FIN SECTION 2 */
-            SECTION 3 .section3 {
+            // SECTION 3 
+            .section3 {
                 border: 5px solid rgb(0, 4, 255);
                 margin-top: 100px !important;
                 .justine {
@@ -262,7 +263,7 @@
                     border: 5px solid rgb(248, 245, 245);
                 }
                 img {
-                    width: 100%;
+                    width: 100% !important;
                     border: 5px solid rgb(0, 255, 0);
                     transition: transform 1.5s;
                     &:hover {
@@ -392,7 +393,8 @@
                 }
             }
             /* FIN SECTION 6 */
-            SECTION 7 .section7 {
+            // SECTION 7 
+            .section7 {
                 border: 5px solid rgb(0, 4, 255);
                 margin-top: 100px !important;
                 .melodie {
@@ -508,3 +510,37 @@
                 }
             }
             /* FIN SECTION 9 */
+            /* SECTION 10 */
+            .section10 {
+                margin-top: 100px !important;
+                border: 5px solid rgb(255, 0, 191);
+                background: rgba(255, 255, 255, 0.08);
+                margin: auto;
+                width: 100%;
+                h2 {
+                    border: 5px solid rgb(68, 0, 255);
+                    border: 5px solid rgb(0, 225, 255);
+                    font-size: 3rem !important;
+                    font-weight: 700;
+                    text-transform: uppercase;
+                    line-height: 1;
+                    margin-bottom: 50px;
+                    &:hover {
+                        color: rgba(255, 255, 255, 0.7);
+                    }
+                }
+                h3 {
+                    padding: 50px;
+                    text-transform: uppercase;
+                    text-align: center;
+                }
+                p {
+                    padding: 30px 200px;
+                }
+                .book {
+                    background-color: rgba(255, 255, 255, 0.7);
+                    width: 60%;
+                    margin: auto;
+                }
+            }
+            /* FIN SECTION 10 */
