--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -589,3 +589,23 @@
             /* FIN SECTION 11 */
         }
         /* FIN MAIN */
+        
+        // FOOTER
+        footer {
+            margin-top: 400px;
+            background: rgba(255, 255, 255, 0.08);
+            height: 30vh;
+            .para1 {
+                border: 5px solid rebeccapurple;
+                padding: 40px;
+            }
+            span {
+                padding-top: 20px;
+                margin-right: 40px;
+                font-size: 1rem;
+            }
+            .copy {
+                font-size: 10px;
+            }
+        }
+        /* FIN FOOTER */
