--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -609,3 +609,40 @@
             }
         }
         /* FIN FOOTER */
+        
+        // MEDIA QUERY
+        // MOBOLE
+        @media screen and (max-width: 991px) {
+            /* style pr le header */
+            #header {
+                height: 30vh;
+                h1 {
+                    font-size: 1.5rem;
+                }
+            }
+            /* fin header */
+            // MAIN
+            .container {
+                h2 {
+                    font-size: 4rem !important;
+                }
+                h3 {
+                    font-size: 2rem !important;
+                    margin-bottom: 40px;
+                }
+            }
+            /* FIN MAIN */
+            // FOOTER
+            footer {
+                margin-bottom: 30px;
+                span {
+                    margin-top: 20px;
+                    margin-right: 20px;
+                    font-size: 14px;
+                }
+                .copy {
+                    font-size: 10px;
+                }
+            }
+            //     /* FIN FOOTER */
+        }
