--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,18 @@
 @charset "UTF-8";
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
+  border: 5px solid red;
   font-family: "Open Sans", sans-serif;
   background: #040404;
   color: #fff;
 }
 
-/* style pr le header */
+/* HEADER */
 #header {
   background: no-repeat url(../../public/img/accueil1.jpg) top/cover !important;
   border: 5px solid red;
@@ -70,24 +73,10 @@ body {
   color: rgba(255, 255, 255, 0.7) !important;
 }
 
-/* fin header */
+/* FIN HEADER */
 main {
-  overflow: hidden !important;
   border: 5px solid #f85104;
   /* FIN RESEAUX SOCIAUX */
-  /*  FIN SECTION 1 */
-  /* FIN SECTION 2 */
-  /* FIN SECTION 3 */
-  /* FIN SECTION 4 */
-  /* FIN SECTION 5 */
-  /* FIN SECTION 6 */
-  /* FIN SECTION 7 */
-  /* FIN SECTION 8 */
-  /* FIN SECTION 9 */
-  /* SECTION 10 */
-  /* FIN SECTION 10 */
-  /* SECTION 11 */
-  /* FIN SECTION 11 */
 }
 main .container-fluid h2 {
   border: 5px solid #00e1ff;
@@ -150,26 +139,41 @@ main .container-fluid .fa-whatsapp {
 main .container-fluid .fa-whatsapp:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section1 {
+main .container {
+  /*  FIN SECTION 1 */
+  /* FIN SECTION 2 */
+  /* FIN SECTION 3 */
+  /* FIN SECTION 4 */
+  /* FIN SECTION 5 */
+  /* FIN SECTION 6 */
+  /* FIN SECTION 7 */
+  /* FIN SECTION 8 */
+  /* FIN SECTION 9 */
+  /* SECTION 10 */
+  /* FIN SECTION 10 */
+  /* SECTION 11 */
+  /* FIN SECTION 11 */
+}
+main .container .section1 {
   border: 5px solid #ff00bf;
   margin-top: 100px !important;
 }
-main .section1 .rapha {
+main .container .section1 .rapha {
   background-color: rgba(255, 255, 255, 0.08) !important;
   border: 5px solid yellow;
 }
-main .section1 .rapha h3:hover {
+main .container .section1 .rapha h3:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section1 .rapha p {
+main .container .section1 .rapha p {
   margin: 40px;
   color: #fff;
   font-weight: bold;
 }
-main .section1 .rapha p:hover {
+main .container .section1 .rapha p:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section1 .connectées {
+main .container .section1 .connectées {
   background-image: url(../../public/img/rapha.jpg) !important;
   height: 100vh !important;
   background-position: center;
@@ -178,30 +182,30 @@ main .section1 .connectées {
   background-attachment: fixed;
   border: 5px solid red;
 }
-main .section1 img {
+main .container .section1 img {
   border: 5px solid #ffc400;
   height: 100vh !important;
   width: 100%;
 }
-main .section2 {
+main .container .section2 {
   border: 5px solid #0004ff;
   margin-top: 100px !important;
 }
-main .section2 .lamia {
+main .container .section2 .lamia {
   background: rgba(255, 255, 255, 0.08) !important;
   border: 5px solid #00ff4c;
 }
-main .section2 .lamia h3:hover {
+main .container .section2 .lamia h3:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section2 .lamia p {
+main .container .section2 .lamia p {
   margin: 50px;
   transition: transform 1s;
 }
-main .section2 .lamia p:hover {
+main .container .section2 .lamia p:hover {
   transform: scale(1.3);
 }
-main .section2 .connectées {
+main .container .section2 .connectées {
   background-image: url(../../public/img/lamia.jpg);
   height: 100vh;
   background-size: cover;
@@ -209,33 +213,34 @@ main .section2 .connectées {
   background-attachment: fixed;
   border: 5px solid #f8f5f5;
 }
-main .section2 img {
+main .container .section2 img {
   width: 100%;
+  height: 100vh;
   border: 5px solid lime;
   transition: transform 1.5s;
 }
-main .section2 img:hover {
+main .container .section2 img:hover {
   transform: scale(1.5);
 }
-main .section3 {
+main .container .section3 {
   border: 5px solid #0004ff;
   margin-top: 100px !important;
 }
-main .section3 .justine {
+main .container .section3 .justine {
   background: rgba(255, 255, 255, 0.08) !important;
   border: 5px solid #00ff4c;
 }
-main .section3 .justine h3:hover {
+main .container .section3 .justine h3:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section3 .justine p {
+main .container .section3 .justine p {
   margin: 50px;
   transition: transform 1s;
 }
-main .section3 .justine p:hover {
+main .container .section3 .justine p:hover {
   transform: scale(1.3);
 }
-main .section3 .connectées {
+main .container .section3 .connectées {
   background-image: url(../../public/img/just.jpg);
   height: 100vh;
   background-size: cover;
@@ -243,33 +248,34 @@ main .section3 .connectées {
   background-attachment: fixed;
   border: 5px solid #f8f5f5;
 }
-main .section3 img {
+main .container .section3 img {
+  height: 100vh;
   width: 100% !important;
   border: 5px solid lime;
   transition: transform 1.5s;
 }
-main .section3 img:hover {
+main .container .section3 img:hover {
   transform: scale(1.5);
 }
-main .section4 {
+main .container .section4 {
   border: 5px solid #0004ff;
   margin-top: 100px !important;
 }
-main .section4 .patrick {
+main .container .section4 .patrick {
   background: rgba(255, 255, 255, 0.08) !important;
   border: 5px solid #00ff4c;
 }
-main .section4 .patrick h3:hover {
+main .container .section4 .patrick h3:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section4 .patrick p {
+main .container .section4 .patrick p {
   margin: 50px;
   transition: transform 1s;
 }
-main .section4 .patrick p:hover {
+main .container .section4 .patrick p:hover {
   transform: scale(1.3);
 }
-main .section4 .connectées {
+main .container .section4 .connectées {
   background-image: url(../../public/img/patrick.jpg);
   height: 100vh;
   background-size: cover;
@@ -277,35 +283,35 @@ main .section4 .connectées {
   background-attachment: fixed;
   border: 5px solid #f8f5f5;
 }
-main .section4 img {
+main .container .section4 img {
   background-position: top !important;
   width: 100%;
   height: 100vh;
   border: 5px solid lime;
   transition: transform 1.5s;
 }
-main .section4 img:hover {
+main .container .section4 img:hover {
   transform: scale(1.5);
 }
-main .section5 {
+main .container .section5 {
   border: 5px solid #0004ff;
   margin-top: 100px !important;
 }
-main .section5 .barbara {
+main .container .section5 .barbara {
   background: rgba(255, 255, 255, 0.08) !important;
   border: 5px solid #00ff4c;
 }
-main .section5 .barbara h3:hover {
+main .container .section5 .barbara h3:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section5 .barbara p {
+main .container .section5 .barbara p {
   margin: 50px;
   transition: transform 1s;
 }
-main .section5 .barbara p:hover {
+main .container .section5 .barbara p:hover {
   transform: scale(1.3);
 }
-main .section5 .connectées {
+main .container .section5 .connectées {
   background-image: url(../../public/img/barbara.jpg);
   height: 100vh;
   background-size: cover;
@@ -313,35 +319,35 @@ main .section5 .connectées {
   background-attachment: fixed;
   border: 5px solid #f8f5f5;
 }
-main .section5 img {
+main .container .section5 img {
   background-position: top !important;
   width: 100%;
   height: 100vh;
   border: 5px solid lime;
   transition: transform 1.5s;
 }
-main .section5 img:hover {
+main .container .section5 img:hover {
   transform: scale(1.5);
 }
-main .section6 {
+main .container .section6 {
   border: 5px solid #0004ff;
   margin-top: 100px !important;
 }
-main .section6 .latifa {
+main .container .section6 .latifa {
   background: rgba(255, 255, 255, 0.08) !important;
   border: 5px solid #00ff4c;
 }
-main .section6 .latifa h3:hover {
+main .container .section6 .latifa h3:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section6 .latifa p {
+main .container .section6 .latifa p {
   margin: 40px;
   transition: transform 1s;
 }
-main .section6 .latifa p:hover {
+main .container .section6 .latifa p:hover {
   transform: scale(1.3);
 }
-main .section6 .connectées {
+main .container .section6 .connectées {
   background-image: url(../../public/img/lat1.jpg);
   height: 100vh;
   background-position: center;
@@ -350,35 +356,35 @@ main .section6 .connectées {
   background-attachment: fixed;
   border: 5px solid #f8f5f5;
 }
-main .section6 img {
+main .container .section6 img {
   background-position: top !important;
   width: 100%;
   height: 100vh;
   border: 5px solid lime;
   transition: transform 1.5s;
 }
-main .section6 img:hover {
+main .container .section6 img:hover {
   transform: scale(1.5);
 }
-main .section7 {
+main .container .section7 {
   border: 5px solid #0004ff;
   margin-top: 100px !important;
 }
-main .section7 .melodie {
+main .container .section7 .melodie {
   background: rgba(255, 255, 255, 0.08) !important;
   border: 5px solid #00ff4c;
 }
-main .section7 .melodie h3:hover {
+main .container .section7 .melodie h3:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section7 .melodie p {
+main .container .section7 .melodie p {
   margin: 40px;
   transition: transform 1s;
 }
-main .section7 .melodie p:hover {
+main .container .section7 .melodie p:hover {
   transform: scale(1.3);
 }
-main .section7 .connectées {
+main .container .section7 .connectées {
   background-image: url(../../public/img/mel2.jpg);
   height: 100vh;
   background-position: top;
@@ -387,35 +393,35 @@ main .section7 .connectées {
   background-attachment: fixed;
   border: 5px solid #f8f5f5;
 }
-main .section7 img {
+main .container .section7 img {
   background-position: top !important;
   width: 100%;
   height: 100vh;
   border: 5px solid lime;
   transition: transform 1.5s;
 }
-main .section7 img:hover {
+main .container .section7 img:hover {
   transform: scale(1.5);
 }
-main .section8 {
+main .container .section8 {
   border: 5px solid #0004ff;
   margin-top: 100px !important;
 }
-main .section8 .daniele {
+main .container .section8 .daniele {
   background: rgba(255, 255, 255, 0.08) !important;
   border: 5px solid #00ff4c;
 }
-main .section8 .daniele h3:hover {
+main .container .section8 .daniele h3:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section8 .daniele p {
+main .container .section8 .daniele p {
   margin: 40px;
   transition: transform 1s;
 }
-main .section8 .daniele p:hover {
+main .container .section8 .daniele p:hover {
   transform: scale(1.3);
 }
-main .section8 .connectées {
+main .container .section8 .connectées {
   background-image: url(../../public/img/dan1.jpg);
   height: 100vh;
   background-position: top;
@@ -424,22 +430,22 @@ main .section8 .connectées {
   background-attachment: fixed;
   border: 5px solid #f8f5f5;
 }
-main .section8 img {
+main .container .section8 img {
   background-position: top !important;
   width: 100%;
   height: 100vh;
   border: 5px solid lime;
   transition: transform 1.5s;
 }
-main .section8 img:hover {
+main .container .section8 img:hover {
   transform: scale(1.5);
 }
-main .section9 {
+main .container .section9 {
   border: 5px solid #ff00bf;
   width: 100%;
   margin-top: 100px !important;
 }
-main .section9 h2 {
+main .container .section9 h2 {
   border: 5px solid #4400ff;
   border: 5px solid #00e1ff;
   font-size: 3rem !important;
@@ -448,33 +454,33 @@ main .section9 h2 {
   line-height: 1;
   margin-bottom: 100px;
 }
-main .section9 h2:hover {
+main .container .section9 h2:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section9 P {
+main .container .section9 P {
   padding: 30px;
   height: 47vh;
   margin-bottom: 14px;
 }
-main .section9 P:hover {
+main .container .section9 P:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section9 .propos {
+main .container .section9 .propos {
   border: 5px solid #00ff0d;
   background: rgba(255, 255, 255, 0.08) !important;
 }
-main .section9 .img {
+main .container .section9 .img {
   border: 5px solid #eeff00;
   height: 100vh;
 }
-main .section10 {
+main .container .section10 {
   margin-top: 100px !important;
   border: 5px solid #ff00bf;
   background: rgba(255, 255, 255, 0.08);
   margin: auto;
   width: 100%;
 }
-main .section10 h2 {
+main .container .section10 h2 {
   border: 5px solid #4400ff;
   border: 5px solid #00e1ff;
   font-size: 3rem !important;
@@ -483,29 +489,29 @@ main .section10 h2 {
   line-height: 1;
   margin-bottom: 50px;
 }
-main .section10 h2:hover {
+main .container .section10 h2:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section10 h3 {
+main .container .section10 h3 {
   padding: 50px;
   text-transform: uppercase;
   text-align: center;
 }
-main .section10 p {
+main .container .section10 p {
   padding: 30px 200px;
 }
-main .section10 .book {
+main .container .section10 .book {
   background-color: rgba(255, 255, 255, 0.7);
   width: 60%;
   margin: auto;
 }
-main .section11 {
+main .container .section11 {
   border: 5px solid #ff00bf;
   background: rgba(255, 255, 255, 0.08);
   width: 100%;
   margin-top: 100px !important;
 }
-main .section11 h2 {
+main .container .section11 h2 {
   border: 5px solid #4400ff;
   border: 5px solid #00e1ff;
   font-size: 3rem !important;
@@ -514,26 +520,26 @@ main .section11 h2 {
   line-height: 1;
   margin-bottom: 50px;
 }
-main .section11 h2:hover {
+main .container .section11 h2:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .section11 h3 {
+main .container .section11 h3 {
   padding: 50px;
   text-transform: uppercase;
   text-align: center;
   border: 5px solid aqua;
 }
-main .section11 p {
+main .container .section11 p {
   padding: 30px 200px;
   border: 5px solid #ff002b;
 }
-main .section11 a {
+main .container .section11 a {
   color: #fff;
 }
-main .section11 .newletter {
+main .container .section11 .newletter {
   background-color: rgba(255, 255, 255, 0.7);
 }
-main .section11 .newletter .input {
+main .container .section11 .newletter .input {
   background-color: transparent;
   border: none;
   text-decoration: none;
@@ -543,9 +549,9 @@ main .section11 .newletter .input {
 
 /* FIN MAIN */
 footer {
-  margin-top: 400px;
+  margin: 100px 0 0 !important;
   background: rgba(255, 255, 255, 0.08);
-  height: 30vh;
+  height: 30vh !important;
 }
 footer .para1 {
   border: 5px solid rebeccapurple;
@@ -561,36 +567,92 @@ footer .copy {
 }
 
 /* FIN FOOTER */
-@media screen and (max-width: 991px) {
-  /* style pr le header */
-  #header {
-    height: 100vh;
-  }
+@media screen and (max-width: 760px) {
+  /* HEADER */
   #header h1 {
     font-size: 1.5rem;
   }
-
-  /* fin header */
-  .container h2 {
-    font-size: 4rem !important;
+  #header .nav-menu a {
+    font-size: 1rem;
   }
-  .container h3 {
+
+  /* FIN HEADER */
+  main {
+    overflow: hidden !important;
+  }
+  main .container-fluid h2 {
     font-size: 2rem !important;
-    margin-bottom: 40px;
+    margin-top: 50px;
+  }
+  main .container {
+    /*  FIN SECTION 1 à 11 */
+    /* FIN SECTION 9 */
+    /* SECTION 10 */
+    /* FIN SECTION 10 */
+    /* SECTION 11 */
+    /* FIN SECTION 11 */
+  }
+  main .container .section1,
+main .container .section2,
+main .container .section3,
+main .container .section4,
+main .container .section5,
+main .container .section6,
+main .container .section7,
+main .container .section8,
+main .container .section9,
+main .container .section10,
+main .container .section11 {
+    margin-top: 50px !important;
+  }
+  main .container .section9 h2 {
+    font-size: 2rem !important;
+    margin-bottom: 50px;
+  }
+  main .container .section9 P {
+    padding: 30px !important;
+  }
+  main .container .section10 h2 {
+    font-size: 2rem !important;
+    margin-bottom: 50px;
+  }
+  main .container .section10 h3 {
+    padding: 0px;
+  }
+  main .container .section10 p {
+    padding: 30px;
+  }
+  main .container .section11 h2 {
+    font-size: 2rem !important;
+  }
+  main .container .section11 h3 {
+    padding: 0px;
+  }
+  main .container .section11 .para {
+    font-size: 1.6em !important;
+  }
+  main .container .section11 p {
+    padding: 30px;
   }
 
   /* FIN MAIN */
   footer {
-    margin-bottom: 30px;
+    margin-top: 100px;
+    height: 30vh;
+  }
+  footer .para1 {
+    padding: 40px;
   }
   footer span {
-    margin-top: 20px;
-    margin-right: 20px;
-    font-size: 14px;
+    padding-top: 20px;
+    margin-right: 30px !important;
+    font-size: 0.6rem;
   }
   footer .copy {
-    font-size: 10px;
+    font-size: 9px;
   }
+
+  /* FIN FOOTER */
 }
 
 /*# sourceMappingURL=style.css.map */
